# bug-repro-meson-subproject-bindgen

./: meson.build
subprojects/foo/: meson.build
